cambio de color de los botones cuando pasen por encia

--- a/default.css
+++ b/default.css
@@ -25,7 +25,7 @@
 	  }
 	  
 	  .box:hover span {
-		color: red; /* Cambia el color a tu preferencia */
+		color: red; /* Cambia el color  */
 		cursor: pointer; /* Cambia el cursor al pasar el ratón por encima del texto */
 	  }
 	  
